Attempting to fix page being wider than the intended column. Select things spilling outside.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -255,8 +255,7 @@ a {
       margin-bottom: 0px;
    }
    p {
-      width: 50%;
-      min-width: 700px;
+      width: 500px;
       text-align: center;
    }
 }
@@ -708,7 +707,6 @@ a {
    div {
       width: 200px;
       text-align: center;
-      margin-right: 50px;
    }
    img{
       width: 160px;
